# ngp-visualizer

./: CMakeLists.txt  README.md  main.cpp
shaders/: point_cloud.frag  point_cloud.vert
